# hedge-fund-inshallah

./: .env.example  .gitignore  CLAUDE.md  pyproject.toml
config/: default.yaml  risk.yaml
config/engines/: mean_reversion.yaml  momentum_scalper.yaml  trend_follower.yaml
data/: circuit_breaker_state.json
scripts/: analyze_engine.py  build_history.py  live_trade.py  paper_trade.py  run_backtest.py  run_robustness.py
src/hfi/: __init__.py
src/hfi/analysis/: engine_analyzer.py
src/hfi/backtest/: csv_export.py  market_conditions.py  random_sampler.py  robustness.py  runner.py  validator.py
src/hfi/core/: config.py  constants.py  types.py
src/hfi/data/: cache.py  fetcher.py  historical.py
src/hfi/engines/: base.py  mean_reversion.py  momentum_scalper.py  trend_follower.py
src/hfi/exchange/: client.py
src/hfi/execution/: order_manager.py  paper_trader.py  trader.py
src/hfi/features/: builder.py  microstructure.py
src/hfi/filters/: chain.py  directional_bias.py  signal_quality.py
src/hfi/monitor/: alerts.py  dashboard.py  snowball.py
src/hfi/pipeline/: runner.py
src/hfi/regime/: detector.py  voting.py
src/hfi/risk/: circuit_breaker.py  manager.py  sizing.py
tests/: test_engines.py  test_pipeline.py  test_risk.py
