[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hfi"
version = "0.1.0"
description = "Hedge Fund Inshallah - Crypto Trading Bot"
requires-python = ">=3.12"
dependencies = [
    "ccxt>=4.0",
    "pydantic>=2.0",
    "pandas>=2.0",
    "numpy>=1.24",
    "pandas-ta>=0.3.14b1",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "aiohttp>=3.9",
    "rich>=13.0",
    "aiosqlite>=0.19",
    "python-telegram-bot>=21.0",
    "vectorbt>=0.26",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]

[tool.hatch.build.targets.wheel]
packages = ["src/hfi"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
